# Combinatorial-Reasoning

./: .gitignore  CONTRIBUTING.md  DEEP_ANALYSIS.md  DEMO_GUIDE.md  FINAL_SUMMARY.md  GRADIO_DEMO.md  ITERATION_1_COMPLETE.md  ITERATION_1_SUMMARY.md  LICENSE  README.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  UI plan.md  config.json  demo.py  gradio_config.json  gradio_demo.py  launch_demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_gradio_demo.py  setup.py  test_gradio_demo.py  test_performance.py
.github/workflows/: ci.yml
crllm/: __init__.py  core.py  main.py
crllm/modules/: __init__.py  combinatorial_optimizer.py  reason_orderer.py  reason_sampler.py  retrieval.py  semantic_filter.py
crqubo/: __init__.py  core.py  exceptions.py  logging_utils.py  main.py  retry_utils.py
crqubo/modules/: __init__.py  combinatorial_optimizer.py  final_inference.py  reason_orderer.py  reason_sampler.py  reason_verifier.py  retrieval.py  semantic_filter.py  task_interface.py
examples/: __init__.py  crllm_demo.ipynb  simple_example.py
public_subtree/: API.md  LICENSE  PUBLISHING.md  README.md  USAGE.md  package_info.txt  publish_subtree.ps1  requirements-extras.txt
public_subtree/.github/workflows/: ci.yml
public_subtree/examples/: simple_example.py
tests/: __init__.py  conftest.py  test_core.py  test_gradio_demo.py
