[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Combinatorial-Reasoning"
version = "0.0.0"
description = "Combinatorial reasoning utilities and demos"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "AadarshCanCode" } ]
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scipy>=1.10.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "openai>=1.0.0,<2.0.0",
    "transformers>=4.30.0,<5.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "torch>=2.0.0,<3.0.0",
    "accelerate>=0.20.0,<1.0.0",
    "dwave-ocean-sdk>=6.0.0,<7.0.0",
    "dimod>=0.12.0,<1.0.0",
    "qiskit-optimization>=0.5.0,<1.0.0",
    "qiskit>=0.44.0,<1.0.0",
    "z3-solver>=4.12.0,<5.0.0",
    "chromadb>=0.4.0,<1.0.0",
    "faiss-cpu>=1.7.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "typing-extensions>=4.5.0,<5.0.0",
    "tqdm>=4.65.0,<5.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "ipywidgets>=8.1.0,<9.0.0",
    "gradio>=4.0.0,<5.0.0",
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/AadarshCanCode/Combinatorial-Reasoning"

[tool.setuptools]
packages = ["crqubo"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "pytest-xdist>=3.3.0,<4.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "black>=23.7.0,<24.0.0",
    "flake8>=6.0.0,<7.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.5.0,<2.0.0",
    "pre-commit>=3.3.0,<4.0.0",
    "sphinx>=7.1.0,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<2.0.0",
    "sphinx-autodoc-typehints>=1.24.0,<2.0.0",
    "myst-parser>=2.0.0,<3.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "jupyterlab>=4.0.0,<5.0.0",
    "ipywidgets>=8.1.0,<9.0.0",
    "nbconvert>=7.7.0,<8.0.0",
    "nbformat>=5.9.0,<6.0.0",
    "jupyter-contrib-nbextensions>=0.7.0,<1.0.0",
    "nbstripout>=0.6.0,<1.0.0",
    "bandit>=1.7.5,<2.0.0",
    "safety>=2.3.0,<3.0.0",
    "memory-profiler>=0.61.0,<1.0.0",
    "line-profiler>=4.1.0,<5.0.0",
    "types-requests>=2.31.0,<3.0.0",
    "types-python-dateutil>=2.8.0,<3.0.0",
]
