[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crqubo"
version = "0.1.0"
description = "CRQUBO: Combinatorial reasoning utilities and demos"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "CRQUBO Team" } ]
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=1.5.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
]

[project.urls]
"Homepage" = "https://github.com/AadarshCanCode/Combinatorial-Reasoning"

[tool.setuptools]
packages = ["crqubo"]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "gradio>=4.0.0",
]

dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
]

extras = [
    "openai",
    "transformers",
    "sentence-transformers",
    "torch",
    "chromadb",
    "faiss-cpu",
    "qiskit",
    "dwave-ocean-sdk",
]
