[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crqubo"
version = "0.1.0"
description = "CRQUBO: Combinatorial reasoning utilities and demos"
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "CRQUBO Team" } ]
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "tokenizers>=0.13.0",
    "dwave-ocean-sdk>=6.0.0",
    "dimod>=0.12.0",
    "qiskit-optimization>=0.5.0",
    "qiskit>=0.44.0",
    "z3-solver>=4.12.0",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.0",
    "gradio>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/AadarshCanCode/Combinatorial-Reasoning"

[tool.setuptools]
packages = ["crqubo"]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "gradio>=4.0.0",
]

dev = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pre-commit",
]

extras = [
    "openai",
    "transformers",
    "sentence-transformers",
    "torch",
    "accelerate",
    "tokenizers",
    "dwave-ocean-sdk",
    "dimod",
    "qiskit",
    "z3-solver",
    "chromadb",
    "faiss-cpu",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["crqubo"]

# flake8 configuration
[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

# mypy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true